[lworld] Reflective method invocation does not handle value type returned as fields

XMLWordPrintable

      # Internal Error (/oracle/valhallaExp/open/src/hotspot/share/runtime/jniHandles.cpp:83), pid=25438, tid=25462
      # assert(oopDesc::is_oop(obj)) failed: not an oop
      #
      # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-adhoc.tobias.open)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-adhoc.tobias.open, compiled mode, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1006bc4] JNIHandles::make_local(JNIEnv_*, oop)+0x154

      Stack: [0x00007f4312e7a000,0x00007f4312f7b000], sp=0x00007f4312f77ef0, free space=1015k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1006bc4] JNIHandles::make_local(JNIEnv_*, oop)+0x154
      V [libjvm.so+0x10300df] JVM_InvokeMethod+0x5df
      J 1765 jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base (0 bytes) @ 0x00007f433d3f208f [0x00007f433d3f1f00+0x000000000000018f]
      J 1763 c2 jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base (104 bytes) @ 0x00007f433d3f2730 [0x00007f433d3f2600+0x0000000000000130]
      J 1762 c2 jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base (10 bytes) @ 0x00007f433d3e9ec0 [0x00007f433d3e9de0+0x00000000000000e0]
      J 1730 c2 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base (65 bytes) @ 0x00007f433d3c6400 [0x00007f433d3c6380+0x0000000000000080]
      J 5592 c2 QTypeDescriptorTest.testMethodInvoke()V (97 bytes) @ 0x00007f433daf70e8 [0x00007f433daf6bc0+0x0000000000000528]
      v ~StubRoutines::call_stub
      V [libjvm.so+0xec079e] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x76e
      V [libjvm.so+0x1609278] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xde8
      V [libjvm.so+0x160a2b6] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x206
      V [libjvm.so+0x102fd16] JVM_InvokeMethod+0x216
      J 1765 jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base (0 bytes) @ 0x00007f433d3f208f [0x00007f433d3f1f00+0x000000000000018f]
      J 1763 c2 jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base (104 bytes) @ 0x00007f433d3f2730 [0x00007f433d3f2600+0x0000000000000130]
      J 1762 c2 jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base (10 bytes) @ 0x00007f433d3e9ec0 [0x00007f433d3e9de0+0x00000000000000e0]
      J 4966 c2 org.testng.internal.MethodInvocationHelper.invokeMethod(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; (239 bytes) @ 0x00007f433d9cb920 [0x00007f433d9cb7e0+0x0000000000000140]
      J 5100 c2 org.testng.internal.Invoker.invokeMethod(Ljava/lang/Object;Lorg/testng/ITestNGMethod;[Ljava/lang/Object;ILorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/ITestClass;[Lorg/testng/ITestNGMethod;[Lorg/testng/ITestNGMethod;Lorg/testng/internal/ConfigurationGroupMethods;Lorg/testng/internal/Invoker$FailureContext;)Lorg/testng/ITestResult; (1242 bytes) @ 0x00007f433da1c898 [0x00007f433da1b140+0x0000000000001758]
      J 4995 c2 org.testng.internal.Invoker.invokeTestMethod(Ljava/lang/Object;Lorg/testng/ITestNGMethod;[Ljava/lang/Object;ILorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/ITestClass;[Lorg/testng/ITestNGMethod;[Lorg/testng/ITestNGMethod;Lorg/testng/internal/ConfigurationGroupMethods;Lorg/testng/internal/Invoker$FailureContext;)Lorg/testng/ITestResult; (37 bytes) @ 0x00007f433d9d7b78 [0x00007f433d9d7a60+0x0000000000000118]
      J 5116 c2 org.testng.internal.Invoker.invokeTestMethods(Lorg/testng/ITestNGMethod;Lorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/internal/ConfigurationGroupMethods;Ljava/lang/Object;Lorg/testng/ITestContext;)Ljava/util/List; (1101 bytes) @ 0x00007f433da2cfb4 [0x00007f433da2c1c0+0x0000000000000df4]
      J 4920 c2 org.testng.internal.TestMethodWorker.invokeTestMethods(Lorg/testng/ITestNGMethod;Ljava/lang/Object;Lorg/testng/ITestContext;)V (44 bytes) @ 0x00007f433d84a864 [0x00007f433d84a640+0x0000000000000224]
      J 4916 c2 org.testng.internal.TestMethodWorker.run()V (94 bytes) @ 0x00007f433d8525fc [0x00007f433d852360+0x000000000000029c]
      j org.testng.TestRunner.privateRun(Lorg/testng/xml/XmlTest;)V+358
      J 4843 c2 org.testng.TestRunner.run()V (44 bytes) @ 0x00007f433d7b30a8 [0x00007f433d7b3000+0x00000000000000a8]
      J 4842 c2 org.testng.SuiteRunner.runSequentially()V (38 bytes) @ 0x00007f433d793c34 [0x00007f433d793b00+0x0000000000000134]
      j org.testng.SuiteRunner.privateRun()V+281
      J 4834 c2 org.testng.SuiteRunner.run()V (26 bytes) @ 0x00007f433d65b634 [0x00007f433d65b5e0+0x0000000000000054]
      j org.testng.SuiteRunnerWorker.runSuite(Lorg/testng/internal/SuiteRunnerMap;Lorg/testng/xml/XmlSuite;)V+89
      J 4811 c2 org.testng.SuiteRunnerWorker.run()V (16 bytes) @ 0x00007f433d7513d8 [0x00007f433d7512e0+0x00000000000000f8]
      j org.testng.TestNG.runSuitesSequentially(Lorg/testng/xml/XmlSuite;Lorg/testng/internal/SuiteRunnerMap;ILjava/lang/String;)V+66
      j org.testng.TestNG.runSuitesLocally()Ljava/util/List;+143
      J 3529 c2 org.testng.TestNG.run()V (172 bytes) @ 0x00007f433d4e1d1c [0x00007f433d4e18c0+0x000000000000045c]
      j com.sun.javatest.regtest.agent.TestNGRunner.main(Ljava/lang/ClassLoader;[Ljava/lang/String;)V+290
      J 3397 c2 com.sun.javatest.regtest.agent.TestNGRunner.main([Ljava/lang/String;)V (6 bytes) @ 0x00007f433d163ad8 [0x00007f433d163ac0+0x0000000000000018]
      v ~StubRoutines::call_stub

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: