8223965: [lworld] Reflective method invocation does not handle value type returned as fields

Reviewed-by: iklam